kube/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: np-db

spec:
  selector:
    app: np-db
  ports:
    - name: db
      port: 5432
      targetPort: db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-db
  labels:
    app: np-db

spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-db
  template:
    metadata:
      labels:
        app: np-db
    spec:
      containers:
        - name: np-db
          image: postgis/postgis:13-master
          imagePullPolicy: Always

          ports:
            - name: db
              containerPort: 5432

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: fallback
            - mountPath: /docker-entrypoint-initdb.d
              name: np-db-initdb

      volumes:
        - name: fallback
          emptyDir: {}
        # - name: np-db-pv-claim
        #   persistentVolumeClaim:
        #     claimName: np-db-pv-claim
        - name: np-db-initdb
          hostPath:
            path: /var/jenkins_home/workspace/Deploy Natural Presence/kube/initdb/cv.sql
            # type: File
# ---
# kind: PersistentVolume
# apiVersion: v1
# metadata:
#   name: np-db-pv
#   labels:
#     type: local
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 100M
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     path: "/root/data"

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   labels:
#     app: np-db
#   name: np-db-pv-claim
# spec:
#   storageClassName: manual
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 100M
