kube/backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: np-back-ingress
spec:
  rules:
    - host: backoffice.caucheteux.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: np-back
                port:
                  name: app

---
apiVersion: v1
kind: Service
metadata:
  name: np-back

spec:
  selector:
    app: np-back
  ports:
    - name: app
      port: 8055
      targetPort: app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-back
  labels:
    app: np-back

spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-back
  template:
    metadata:
      labels:
        app: np-back
    spec:
      containers:
        - name: np-back
          image: directus/directus:latest
          imagePullPolicy: Always

          ports:
            - name: app
              containerPort: 8055

          # TODO: Add env variables
          volumeMounts:
            - name: uploads
              mountPath: /directus/uploads
            - name: database
              mountPath: /directus/database

      # TODO: Add volumes
      volumes:
        - name: uploads
          emptyDir: {}
        - name: database
          emptyDir: {}
